style.css
body {
    margin: 0;
    padding: 0;
}

#container {
    width: 100%;
    height: 100%;
}

#upper-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#lower-containe {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    margin-top: 20px;
}

#lower-container-right {
    margin-top: 30px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#title {
    font-weight: bolder;
}

#enter-code-title {
    font-weight: 900;
    font-size: 40px;
}

textarea {
    width: 500px;
    height: 100px;
    resize: none;
    border: none;
    outline: none;
    /* font-size: 20px;
    font-family: 'Courier New', Courier, monospace;
    font-weight: 900;
    color: #fff;
    background-color: #000; */

}

#code-input {
    border: 5px solid#daf0ff;
    font-family: 'Courier New', Courier, monospace;
    font-size: 16px;
    padding: 5px;
}

#code-result {
    border: 5px solid#daf0ff;
    font-family: 'Courier New', Courier, monospace;
    height: 114px;
    font-size: 16px;
    padding: 5px;
}

#ok-btn,
.cp-btn {
    float: right;
    margin-top: 20px;
    width: 80px;
    height: 49px;
    border: 0;
    background-color: #daf0ff;
    color: #000;
    font-size: 20px;
}

.cp-btn {
    margin-bottom: 40px;
}

.cp-btn {
    position: relative;
    left: 440px;
    opacity: 0.5;
    pointer-events: none;
}

.cp-btn-active {
    position: relative;
    left: 440px;
    opacity: 1;
    pointer-events: auto;
}

#ok-btn:hover,
.cp-btn:hover {
    background-color: #b0dfff;
    cursor: pointer;
}

/* add click style */
#ok-btn:active,
.cp-btn:active {
    background-color: #84caf8;
}

#nyan-Cat-container {
    height: 54px;
}

#nyan-Cat {
    width: 70px;
}

.horizTranslateToRight {
    transition: 1.5s;
    margin-left: 90% !important;
}

.rotateY {
    transform: rotateY(180deg);
    transition: 0.3s;
    margin-left: 90% !important;
}

.rotateYY {
    transform: rotateY(360deg);
    transition: 0.3s;
}

.horizTranslateToLeft {
    transition: 1.5s;
    margin-left: 0% !important;
}

.vertTranslateToTop {
    transition: 0.3s;
    transform: translateY(-20px);
}

.vertTranslateToDown {
    transition: 0.1s;
    transform: translateY(0px);
}


/* fix at bottom */
#footer {
    position: fixed;
    bottom: 0;
    width: 100%;
    height: 30px;
    background-color: #000;
    color: #fff;
    text-align: center;
    line-height: 30px;
}

a {
    color: #ff9999;
    font-size: 17px;
}

/* fix at lower right */
#q-icon {
    position: fixed;
    bottom: 40px;
    right: 10px;
    width: 30px;
    height: 30px;
}

#q-icon:hover {
    cursor: pointer;
}

#share-icon {
    position: fixed;
    bottom: 80px;
    right: 10px;
    width: 30px;
    height: 30px;
}

#share-icon:hover {
    cursor: pointer;
}

